// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connections.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 7,
    },
    "b": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 7,
    },
    "c": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
      },
      "totalCount": 7,
    },
    "d": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJCdWRkIERlZXkiLDNdXQ==",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJKb2UgVHVja2VyIiw1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJKb2huIFNtaXRoIiwxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJLYXRocnluIFJhbWlyZXoiLDRdXQ==",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJTYXJhIFNtaXRoIiwyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJUd2VudHkgU2V2ZW50d28iLDZdXQ==",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2FzYyIsWyJqYW1lcyBzbWl0aCIsN11d",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJuYW1lX2FzYyIsWyJqYW1lcyBzbWl0aCIsN11d",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJuYW1lX2FzYyIsWyJCdWRkIERlZXkiLDNdXQ==",
      },
      "totalCount": 7,
    },
    "e": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiamFtZXMgc21pdGgiLDddXQ==",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiVHdlbnR5IFNldmVudHdvIiw2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiU2FyYSBTbWl0aCIsMl1d",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiS2F0aHJ5biBSYW1pcmV6Iiw0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiSm9obiBTbWl0aCIsMV1d",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiSm9lIFR1Y2tlciIsNV1d",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJuYW1lX2Rlc2MiLFsiQnVkZCBEZWV5IiwzXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJuYW1lX2Rlc2MiLFsiQnVkZCBEZWV5IiwzXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJuYW1lX2Rlc2MiLFsiamFtZXMgc21pdGgiLDddXQ==",
      },
      "totalCount": 7,
    },
    "f": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 7,
    },
    "g": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 7,
    },
    "h": Object {
      "edges": Array [
        Object {
          "cursor": "WyJuYXR1cmFsIiwxXQ==",
          "node": Object {
            "constant": 2,
            "name": "John Smith",
            "x": 1,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwyXQ==",
          "node": Object {
            "constant": 2,
            "name": "Sara Smith",
            "x": 2,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiwzXQ==",
          "node": Object {
            "constant": 2,
            "name": "Budd Deey",
            "x": 3,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw0XQ==",
          "node": Object {
            "constant": 2,
            "name": "Kathryn Ramirez",
            "x": 4,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw1XQ==",
          "node": Object {
            "constant": 2,
            "name": "Joe Tucker",
            "x": 5,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw2XQ==",
          "node": Object {
            "constant": 2,
            "name": "Twenty Seventwo",
            "x": 6,
          },
        },
        Object {
          "cursor": "WyJuYXR1cmFsIiw3XQ==",
          "node": Object {
            "constant": 2,
            "name": "james smith",
            "x": 7,
          },
        },
      ],
    },
    "i": Object {
      "edges": Array [
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "John Smith",
            "x": 1,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Sara Smith",
            "x": 2,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Budd Deey",
            "x": 3,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Kathryn Ramirez",
            "x": 4,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Joe Tucker",
            "x": 5,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "Twenty Seventwo",
            "x": 6,
          },
        },
        Object {
          "cursor": "WyJjb25zdGFudF9hc2MiLFsyXV0=",
          "node": Object {
            "constant": 2,
            "name": "james smith",
            "x": 7,
          },
        },
      ],
    },
    "j": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "authorId": 2,
            "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs4XV0=",
          "node": Object {
            "authorId": 2,
            "headline": "It’s a fez. I wear a fez now. Fezes are cool.",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxMF1d",
          "node": Object {
            "authorId": 2,
            "headline": "What’s with you kids? Every other day it’s food, food, food.",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxMF1d",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 3,
    },
    "k": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "authorId": 2,
            "headline": "No… It’s a thing; it’s like a plan, but with more greatness.",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs4XV0=",
          "node": Object {
            "authorId": 2,
            "headline": "It’s a fez. I wear a fez now. Fezes are cool.",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs4XV0=",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 3,
    },
    "l": Object {
      "edges": Array [
        Object {
          "cursor": "WyJoZWFkbGluZV9hc2MiLFsiWW91IGhpdCBtZSB3aXRoIGEgY3JpY2tldCBiYXQuIiw0XV0=",
          "node": Object {
            "authorId": 1,
            "headline": "You hit me with a cricket bat.",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJoZWFkbGluZV9hc2MiLFsiWW91IGhpdCBtZSB3aXRoIGEgY3JpY2tldCBiYXQuIiw0XV0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "WyJoZWFkbGluZV9hc2MiLFsiWW91IGhpdCBtZSB3aXRoIGEgY3JpY2tldCBiYXQuIiw0XV0=",
      },
      "totalCount": 4,
    },
    "m": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
      },
      "totalCount": 7,
    },
    "n": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": null,
      },
      "totalCount": 7,
    },
    "o": Object {
      "nodes": Array [
        Object {
          "rowId": 2,
        },
      ],
    },
    "p": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
      },
      "totalCount": 7,
    },
    "q": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
        "hasNextPage": true,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 7,
    },
    "r": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": true,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
      },
      "totalCount": 7,
    },
  },
}
`;

exports[`connections-filter.graphql 1`] = `
Object {
  "data": Object {
    "aa": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 6,
    },
    "ab": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 1,
    },
    "ac": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 1,
    },
    "ad": Object {
      "edges": Array [],
      "pageInfo": Object {
        "endCursor": null,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": null,
      },
      "totalCount": 0,
    },
    "ae": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 6,
    },
    "af": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 1,
    },
    "ag": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 2,
    },
    "ah": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 3,
    },
    "ai": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
      },
      "totalCount": 4,
    },
    "aj": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 5,
    },
    "ak": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 2,
    },
    "al": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 5,
    },
    "am": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
      },
      "totalCount": 1,
    },
    "an": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
      },
      "totalCount": 1,
    },
    "ao": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
      },
      "totalCount": 1,
    },
    "ap": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
      },
      "totalCount": 1,
    },
    "aq": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 2,
    },
    "ar": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 3,
    },
    "as": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 1,
    },
    "at": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 2,
    },
    "au": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 5,
    },
    "av": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 4,
    },
    "aw": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 6,
    },
    "ax": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
          "node": Object {
            "email": "john.smith@email.com",
            "id": 1,
            "name": "John Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsxXV0=",
      },
      "totalCount": 6,
    },
    "ay": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 5,
    },
    "az": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
      },
      "totalCount": 4,
    },
    "ba": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
          "node": Object {
            "email": "james.smith@email.com",
            "id": 7,
            "name": "james smith",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs3XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
      },
      "totalCount": 6,
    },
    "bb": Object {
      "edges": Array [
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
          "node": Object {
            "email": "sara.smith@email.com",
            "id": 2,
            "name": "Sara Smith",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFszXV0=",
          "node": Object {
            "email": "budd.deey@email.com",
            "id": 3,
            "name": "Budd Deey",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs0XV0=",
          "node": Object {
            "email": "kathryn.ramirez@email.com",
            "id": 4,
            "name": "Kathryn Ramirez",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs1XV0=",
          "node": Object {
            "email": "joe.tucker@email.com",
            "id": 5,
            "name": "Joe Tucker",
          },
        },
        Object {
          "cursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
          "node": Object {
            "email": "graphile-build.issue.27.exists@example.com",
            "id": 6,
            "name": "Twenty Seventwo",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFs2XV0=",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "WyJwcmltYXJ5X2tleV9hc2MiLFsyXV0=",
      },
      "totalCount": 5,
    },
  },
}
`;
